--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,11 +23,11 @@ jobs:
       with:
           name: save-data
           path: |
-            data/Jumiaproducts.csv
+            data/Jumiaproducts.pkl
     - name: Commit and Push changes
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add data/Jumiaproducts.csv
+        git add data/Jumiaproducts.pkl
         git commit -m "Add generated artifact"
         git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:${{ github.ref }}
